[project]
name = "pretix-bitpay"
dynamic = ["version"]
description = "This plugin allows accepting crypto currency payments in pretix via BitPay-compatible payment providers."
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [
    "btcpay-python",
]

[project.entry-points."pretix.plugin"]
pretix_bitpay = "pretix_bitpay:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix/pretix-bitpay"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_bitpay.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false